[gd_scene load_steps=2 format=3 uid="uid://c2y4mpxfhpdnd"]

[ext_resource type="Script" path="res://scripts/ui/round_end_controller.gd" id="1_round_end"]

[node name="RoundEndPanel" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_round_end")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SummaryLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Round Complete!"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Gold Collected: 0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time Used: 0.0s"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"
